--- a/mars/observatory.html
+++ b/mars/observatory.html
@@ -183,9 +183,12 @@
     <!-- help tab -->
     <div id="id_help_tab" class="tab-pane" style="height:100%;">
         <div class="lb_scrollable">
-            <p>For details, please see <a href="http://observatoryjs.com/">Observatory web page</a>. This is version 0.2.1.
-                This package provides
-                powerful logging, inspection and monitoring for your <a href="http://meteor.com">Meteor framework</a> applications.
+            <p>Please see <a href="http://observatoryjs.com/">Observatory web page</a> for the complete documentation. Since 
+                <span class="label label-success">version 0.3.0</span> we have shifted main development focus to Observatory: Vega
+                - cloud-based easy to use logging, monitoring and application management for your Meteor apps. 
+                <a href="http://observatoryjs.com/">Check it out!</a>
+            </p>
+            <p>
                 Observatory panel is controlled by pressing the "O!" button in the bottom-left corner of the page or "ctrl + ~" key:
                 you can have it small, medium,
                 large or completely turned off. By moving between tabs you can analyze logs (updated live), your application's templates with
@@ -200,10 +203,11 @@
             </p>
             <h5>Logging in a nutshell:</h5>
             <p>
-                Simply call <code>TL = TLog.getLogger(TLog.LOGLEVEL_MAX,true,true)</code> once in your app's common
+                Simply call <code>tb = Observatory.getToolbox()</code> once in your app's common
                 code (that gets executed on both client and server) and then call the following obvious methods:
-                <code>TL.fatal("..."), error, warn, info, verbose, debug</code>. Your logs will be updated automatically in the "Log" tab.
-                There's much more - full API and options is described <a href="https://github.com/jhoxray/observatory">on gitub</a>.
+                <code>tb.fatal("..."), error, warn, info, verbose, debug</code>. Your logs will be updated automatically in the "Log" tab.
+                There's much, much more - <a href="http://observatoryjs.com/#docInstallation">read the docs</a> for automagical logging,
+                monitoring, profiling and app management features!
             </p>
         </div>
 
