stopping the UI version RIGHT HERE

--- a/mars/observatory.html
+++ b/mars/observatory.html
@@ -6,28 +6,6 @@
         -->
 
         <div id="id_logs_bootstrap" class="observatory_panel_static">
-              {{#if fullFeatured}}
-              <ul class="nav-tabs" id="lb_main_tab">
-                    <li><a href="#" data-target="observatoryjsLogsTab" id="id_logs_tab_btn">Logs</a></li>
-                    <li><a href="#" data-target="observatoryjsInternalsTab" id="id_app_tab_btn">Templates Inspection</a></li>
-                    <!-- <li><a href="#id_templates_tab" id="id_templates_tab_btn">Tests</a></li> -->
-                    <!-- <li><a href="#" data-target="observatoryjsLogsSimple" id="id_export_tab_btn">Export</a></li> -->
-                    <li><a href="#" data-target="observatoryjsHelpTab" id="id_help_tab_btn">Help</a></li>
-                    <li><button class="lb_btn pull-right" type="button" id="lb_btn_change_theme">change theme</button></li>
-                   <!-- <li><button class="btn btn-mini btn-info" type="button" id="lb_btn_switch_dynamic">toggle full page</button></li> -->
-                    <li><button class="lb_btn pull-right" id="lb_btn_clear_logs" type="button" disabled>clear logs</button></li>
-                  <div id="lb_status_line" class="pull-right">
-                      {{#with blGetSession "observatoryjs.ConnectionStatus"}}
-                      {{#if connected}}
-                      <span style="color: #2c2;">connected</span>
-                      {{else}}
-                      <span style="color: #c22;">disconnected:</span>{{reason}} ({{retryCount}})
-                      | status: {{status}}
-                      {{/if}}
-                      {{/with}}
-                  </div>
-              </ul>
-               {{else}}
                 <div id="lb_status_line">
                     {{#with blGetSession "observatoryjs.ConnectionStatus"}}
                     {{#if connected}}
@@ -38,9 +16,10 @@
                     {{/if}}
                     {{/with}}
                 </div>
-              {{/if}}
 
-        {{{observatoryjsRenderCurrent}}}
+
+        <!-- {{{observatoryjsRenderCurrent}}} -->
+            {{>observatoryjsLogsTab}}
         </div>
         <a class="observatory_trigger" href="#" id="btn_toggle_logs">O!</a>
         <a class="observatory_trigger" href="#" id="btn_toggle_session">S!</a>
